--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,17 @@ body {
     width: 150px;
     height: 150px;
 }
+
+@media(max-width: 768px){
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  article#main-col,
+  aside#sidebar{
+    float:none;
+    text-align:center;
+    width:100%;
+  }
