--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,12 @@ body {
   font-weight: bold;
 }
 
+.icons {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+
 .left, .right, .mid {
     background-color: rgba(214, 217, 219, 0.9);
     border-radius: 12px;
@@ -48,17 +54,3 @@ body {
     width: 150px;
     height: 150px;
 }
-
-@media(max-width: 768px){
-  header #branding,
-  header nav,
-  header nav li,
-  #newsletter h1,
-  #newsletter form,
-  #boxes .box,
-  article#main-col,
-  aside#sidebar{
-    float:none;
-    text-align:center;
-    width:100%;
-  }
