--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,11 @@ div {
     width: 150px;
     height: 150px;
 }
+
+.right img {
+    display: block;
+    margin: auto;
+    padding: 10px;
+    width: 150px;
+    height: 150px;
+}
